--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,18 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules
+dist
+dist-ssr
+*.local
+
 
 # testing
 /coverage
@@ -22,3 +31,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
