--- a/server/.env.EXAMPLE
+++ b/server/.env.EXAMPLE
@@ -1,2 +1,2 @@
-MONGODB_URI='mongodb://127.0.0.1:27017/tech-thoughts'
+MONGODB_URI='mongodb+srv://staceymoenter:<db_password>@cluster0.c6c93.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
 JWT_SECRET_KEY='mysecretshhh'
