updated the deploy.yml to main instead of develop and took dirname out of server.ts

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,7 @@ name: Test workflow
 on:
   pull_request:
     branches:
-      - develop
-      - staging
+      - main
 jobs:
   test:
     runs-on: ubuntu-latest
