--- a/server/.env.EXAMPLE
+++ b/server/.env.EXAMPLE
@@ -1,2 +1,4 @@
 MONGODB_URI='mongodb://127.0.0.1:27017/tech-thoughts'
 JWT_SECRET_KEY='mysecretshhh'
+API_BASE_URL=https://www.omdbapi.com
+API_KEY=
