updated the auth.ts to old version and updated the .env.EXAMPLE

--- a/server/.env.EXAMPLE
+++ b/server/.env.EXAMPLE
@@ -2,3 +2,5 @@ MONGODB_URI='mongodb://127.0.0.1:27017/tech-thoughts'
 JWT_SECRET_KEY='mysecretshhh'
 API_BASE_URL=https://www.omdbapi.com
 API_KEY=
+
+//test
