--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,17 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
-    "seed": "node dist/seeds/seed.js",
-    "watch": "nodemon dist/server.js",
+    "start": "npm run build && node dist/server.js",
+    "seed": "npm run build && node dist/seeds/seed.js",
+    "watch": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "src"
+    ],
+    "ext": "ts,json,js",
+    "exec": "npm run build && node dist/server.js"
   },
   "keywords": [],
   "author": "",
