--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "client:dev": "cd client && npm run dev",
     "seed": "cd server && npm run seed",
     "build": "concurrently \"cd server && npm run build\" \"cd client && npm run build\"",
+    "watch": "cd server && nodemon dist/server.js",
     "render-build": "npm install && npm run build"
   },
   "keywords": [],
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.4.1",
     "concurrently": "^8.2.2",
+    "nodemon": "^3.1.10",
     "wait-on": "^7.2.0"
   },
   "dependencies": {
