added front end code for email invites

--- a/server/.env.EXAMPLE
+++ b/server/.env.EXAMPLE
@@ -2,5 +2,7 @@ MONGODB_URI='mongodb://127.0.0.1:27017/tech-thoughts'
 JWT_SECRET_KEY='mysecretshhh'
 API_BASE_URL=https://www.omdbapi.com
 API_KEY=
+SENDGRID_API_KEY=<your_sendgrid_api_key>
+FROM_EMAIL=<your_email_address>
 
 //test
