--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "start": "npm run build && node dist/server.js",
     "seed": "npm run build && node dist/seeds/seed.js",
     "watch": "nodemon",
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "nodemonConfig": {
