--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "wait-on": "^7.2.0"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.5",
     "bootstrap": "^5.3.5",
     "framer-motion": "^12.7.4",
     "react-icons": "^5.5.0"
