added code on backend for text messaging

--- a/server/.env.EXAMPLE
+++ b/server/.env.EXAMPLE
@@ -4,5 +4,11 @@ API_BASE_URL=https://www.omdbapi.com
 API_KEY=
 SENDGRID_API_KEY=<your_sendgrid_api_key>
 FROM_EMAIL=<your_email_address>
+TWILIO_ACCOUNT_SID=your_account_sid_here
+TWILIO_AUTH_TOKEN=your_auth_token_here
+TWILIO_PHONE_NUMBER=your_twilio_trial_number_here
 
-//test
+# Note: The above values are just examples. You should replace them with your actual credentials.
+# Make sure to keep this file secret and do not share it publicly.
+# The .env file should not be committed to version control.
+# You can use a .gitignore file to exclude it from being tracked by git.
