--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@vitejs/plugin-react": "^4.4.1",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.10",
