--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
+    "react-input-mask-next": "^3.0.0-alpha.12",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
