--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "framer-motion": "^12.7.4",
     "graphql": "^16.11.0",
     "react-icons": "^5.5.0",
+    "react-input-mask-next": "^3.0.0-alpha.12",
     "twilio": "^5.5.2"
   }
 }
