--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.5.0",
     "framer-motion": "^12.7.4",
     "graphql": "^16.11.0",
+    "node-fetch": "^3.3.2",
     "react-icons": "^5.5.0",
     "react-input-mask-next": "^3.0.0-alpha.12",
     "twilio": "^5.5.2"
