--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/dotenv": "^6.1.1",
     "@vitejs/plugin-react": "^4.4.1",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.10",
