--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
     "react-input-mask-next": "^3.0.0-alpha.12",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
