--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,10 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
     "react-input-mask-next": "^3.0.0-alpha.12",
-    "react-icons": "^5.5.0",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
