--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "framer-motion": "^12.9.2",
     "graphql": "^16.11.0",
     "node-fetch": "^3.3.2",
+    "react-confetti": "^6.4.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-input-mask-next": "^3.0.0-alpha.12",
+    "react-use": "^17.6.0",
     "twilio": "^5.5.2"
   }
 }
