fixed modal on watchlist AND saved star on browse page

--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@apollo/client": "^3.13.8",
     "@sendgrid/mail": "^8.1.5",
     "bootstrap": "^5.3.5",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.9.2",
     "graphql": "^16.11.0",
+    "mongoose": "^8.14.1",
     "node-fetch": "^3.3.2",
     "react-confetti": "^6.4.0",
     "react-hot-toast": "^2.5.2",
